--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
     "axios": "^1.4.0",
     "boxicons": "^2.1.4",
     "concurrently": "^8.2.1",
