--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
+    "use-debounce": "^10.0.0",
     "webpack-dev-server": "^4.15.1"
   },
   "devDependencies": {
