--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
+    "typeface-poppins": "^1.1.13",
     "use-debounce": "^10.0.0",
     "webpack-dev-server": "^4.15.1"
   },
@@ -31,12 +32,15 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "miragejs": "^0.1.47",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
     "vite": "^4.4.5"
   },
   "config": {
