feat: include shadcn ui and auth page

--- a/package.json
+++ b/package.json
@@ -13,22 +13,31 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.3.1",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.4.0",
     "boxicons": "^2.1.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "concurrently": "^8.2.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "lucide-react": "^0.309.0",
     "mongoose": "^7.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "typeface-poppins": "^1.1.13",
     "use-debounce": "^10.0.0",
     "webpack-dev-server": "^4.15.1"
   },
   "devDependencies": {
+    "@types/node": "^20.10.8",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
@@ -41,6 +50,7 @@
     "miragejs": "^0.1.47",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3",
     "vite": "^4.4.5"
   },
   "config": {
