feat: include state management
#3

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^6.15.0",
     "typeface-poppins": "^1.1.13",
     "use-debounce": "^10.0.0",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
