--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.3.1",
+    "apexcharts": "^3.48.0",
     "axios": "^1.4.0",
     "boxicons": "^2.1.4",
     "concurrently": "^8.2.1",
@@ -21,6 +22,7 @@
     "mongoose": "^7.4.2",
     "netlify-identity-widget": "^1.9.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
