--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.3.1",
+    "@sentry/react": "^8.25.0",
+    "@sentry/vite-plugin": "^2.22.0",
     "apexcharts": "^3.48.0",
     "axios": "^1.4.0",
     "boxicons": "^2.1.4",
